changin filter location before vad

--- a/notebooks/corsound_spectrogram_script.ipynb
+++ b/notebooks/corsound_spectrogram_script.ipynb
@@ -354,12 +354,43 @@
     "id": "XZuDEHpv9m8I"
    },
    "source": [
-    "#### Cutting signal with VAD result\n"
+    "#### Cutting signal with VAD result after LPF\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "XZuDEHpv9m8I"
+   },
+   "source": [
+    "##### LPF\n",
+    "We have a real signal, nyquist freq = 44khz, this is way more than we need since the human voice freq range is 80Hz-255Hz. We will perform a low pass filtering with cut-off frequency 1kHz, (about the same scale and much easier remembering, also the lpf is not ideal and we don't want to cause a signal loss.\n",
+    "Then, we can discard freq > 1k and focus only on relevant signal.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.signal import butter,filtfilt\n",
+    "def butter_lowpass_filter(data, cutoff, fs, order):\n",
+    "    nyq = fs / 2\n",
+    "    normal_cutoff = cutoff / nyq\n",
+    "    # Get the filter coefficients \n",
+    "    b, a = butter(order, normal_cutoff, btype='low', analog=False)\n",
+    "    y = filtfilt(b, a, data)\n",
+    "    return y\n",
+    "\n",
+    "order = 3\n",
+    "cutoff = 1000\n",
+    "signal_wav_filtered = butter_lowpass_filter(signal_wav, cutoff, samplerate, order)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -397,206 +428,28 @@
        "(215014,)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "signal_wav_after_vad = signal_wav[np.where(ynew>0)]\n",
+    "signal_wav_after_vad = signal_wav_filtered[np.where(ynew>0)]\n",
     "signal_wav_after_vad.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(218880,)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "signal_wav.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(454,)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "import scipy\n",
+    "scipy.io.wavfile.write(\"before_vad.wav\", samplerate, signal_wav)\n",
     "scipy.io.wavfile.write(\"vad.wav\", samplerate, signal_wav[np.where(ynew>0)])\n",
-    "!open bla.wav"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-1367, -1311, -1238, -1144, -1019,  -868,  -723,  -611,  -541,\n",
-       "        -500,  -467,  -422,  -357,  -285,  -224,  -176,  -135,   -98,\n",
-       "         -62,   -22,    25,    71,   104,   118,   124,   137,   173,\n",
-       "         235,   311,   382,   442,   490,   529,   561,   588,   614,\n",
-       "         643,   674,   709,   747,   785,   826,   869,   917,   966,\n",
-       "        1016,  1062,  1098,  1118,  1125,  1126,  1124,  1110,  1082,\n",
-       "        1049,  1017,   984,   939,   872,   785,   689,   601,   528,\n",
-       "         460,   392,   325,   261,   194,   118,    46,   -10,   -52,\n",
-       "         -86,  -114,  -134,  -147,  -158,  -171,  -187,  -197,  -190,\n",
-       "        -172,  -161,  -171,  -199,  -230,  -260,  -292,  -327,  -360,\n",
-       "        -381,  -386,  -382,  -387,  -405,  -432,  -475,  -542,  -625,\n",
-       "        -693,  -730,  -745,  -755,  -772,  -799,  -833,  -853,  -845,\n",
-       "        -810,  -758,  -692,  -618,  -548,  -491,  -440,  -394,  -362,\n",
-       "        -378,  -402,  -431,  -465,  -502,  -528,  -540,  -556,  -585,\n",
-       "        -612,  -618,  -602,  -562,  -499,  -426,  -368,  -337,  -329,\n",
-       "        -334,  -345,  -353,  -348,  -330,  -299,  -261,  -228,  -208,\n",
-       "        -196,  -180,  -149,   -92,     0,   107,   194,   240,   258,\n",
-       "         279,   319,   376,   434,   480,   511,   535,   560,   593,\n",
-       "         650,   739,   842,   935,  1010,  1069,  1111,  1141,  1179,\n",
-       "        1227,  1265,  1283,  1295,  1319,  1360,  1415,  1474,  1519,\n",
-       "        1534,  1524,  1505,  1485,  1463,  1431,  1385,  1320,  1238,\n",
-       "        1150,  1073,  1021,   993,   965,   915,   843,   762,   688,\n",
-       "         629,   592,   569,   543,   504,   458,   411,   376,   360,\n",
-       "         352,   328,   277,   208,   119,     5,  -117,  -217,  -288,\n",
-       "        -355,  -429,  -496,  -546,  -583,  -608,  -618,  -628,  -649,\n",
-       "        -672,  -684,  -690,  -693,  -687,  -680,  -696,  -735,  -771,\n",
-       "        -781,  -763,  -719,  -652,  -585,  -546,  -538,  -540,  -535,\n",
-       "        -520,  -499,  -488,  -501,  -542,  -594,  -634,  -647,  -628,\n",
-       "        -588,  -557,  -564,  -609,  -662,  -691,  -690,  -670,  -641,\n",
-       "        -610,  -587,  -574,  -563,  -545,  -517,  -485,  -466,  -468,\n",
-       "        -487,  -512,  -542,  -583,  -621,  -646,  -670,  -715,  -779,\n",
-       "        -841,  -885,  -910,  -916,  -900,  -871,  -844,  -836,  -853,\n",
-       "        -892,  -946, -1016, -1104, -1202, -1293, -1380, -1478, -1576,\n",
-       "       -1643, -1675, -1707, -1760, -1829, -1909, -2002, -2088, -2144,\n",
-       "       -2177, -2212, -2257, -2306, -2363, -2414, -2415, -2317, -2129,\n",
-       "       -1908, -1706, -1541, -1394, -1236, -1054,  -857,  -662,  -481,\n",
-       "        -333,  -243,  -202,  -165,   -80,    82,   315,   582,   823,\n",
-       "         996,  1106,  1195,  1303,  1441,  1582,  1693,  1754,  1769,\n",
-       "        1752,  1714,  1677,  1665,  1684,  1719,  1746,  1744,  1710,\n",
-       "        1659,  1611,  1578,  1558,  1549,  1548,  1553,  1568,  1607,\n",
-       "        1676,  1764,  1862,  1970,  2090,  2204,  2294,  2348,  2359,\n",
-       "        2318,  2222,  2088,  1940,  1804,  1697,  1618,  1552,  1485,\n",
-       "        1409,  1318,  1217,  1117,  1013,   889,   745,   600,   472,\n",
-       "         357,   247,   150,    84,    57,    68,   102,   133,   138,\n",
-       "         112,    64,    -3,   -86,  -175,  -249,  -293,  -308,  -305,\n",
-       "        -300,  -302,  -312,  -330,  -354,  -379,  -397,  -413,  -446,\n",
-       "        -515,  -621,  -736,  -825,  -871,  -886,  -891,  -900,  -922,\n",
-       "        -952,  -969,  -953,  -904,  -845,  -788,  -736,  -692,  -666,\n",
-       "        -659,  -652,  -627,  -580,  -528,  -484,  -450,  -416,  -376,\n",
-       "        -329,  -276,  -223,  -181], dtype=int16)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "signal_wav[np.where(vad>0)]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "XZuDEHpv9m8I"
-   },
-   "source": [
-    "### LPF\n",
-    "We have a real signal, nyquist freq = 44khz, this is way more than we need since the human voice freq range is 80Hz-255Hz. We will perform a low pass filtering with cut-off frequency 1kHz, (about the same scale and much easier remembering, also the lpf is not ideal and we don't want to cause a signal loss.\n",
-    "Then, we can discard freq > 1k and focus only on relevant signal.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from scipy.signal import butter,filtfilt\n",
-    "# def butter_lowpass_filter(data, cutoff, fs, order):\n",
-    "#     nyq = fs / 2\n",
-    "#     normal_cutoff = cutoff / nyq\n",
-    "#     # Get the filter coefficients \n",
-    "#     b, a = butter(order, normal_cutoff, btype='low', analog=False)\n",
-    "#     y = filtfilt(b, a, data)\n",
-    "#     return y\n",
-    "\n",
-    "# order = 3\n",
-    "# cutoff = 1000\n",
-    "# signal_wav_filtered = butter_lowpass_filter(signal_wav, cutoff, samplerate, order)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "XZuDEHpv9m8I"
-   },
-   "source": [
-    "let's take a look at part of the signal before and after lpf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# time = np.linspace(0., length, signal_wav.shape[0])\n",
-    "# plt.plot(time, signal_wav_filtered, label=data.Labels[17])\n",
-    "# plt.legend()\n",
-    "# plt.xlabel(\"Time [s]\")\n",
-    "# plt.ylabel(\"Amplitude\")\n",
-    "# plt.ylim(0,1)\n",
-    "# plt.ylim(-1000,1000)\n",
-    "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# time = np.linspace(0., length, signal_wav.shape[0])\n",
-    "# plt.plot(time, signal_wav, label=data.Labels[17])\n",
-    "# plt.legend()\n",
-    "# plt.xlabel(\"Time [s]\")\n",
-    "# plt.ylabel(\"Amplitude\")\n",
-    "# plt.ylim(0,1)\n",
-    "# plt.ylim(-1000,1000)\n",
-    "# plt.show()"
+    "!open before_vad.wav\n",
+    "!sleep 5\n",
+    "!open vad.wav"
    ]
   },
   {
